--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bunyan-prettystream": "^0.1.3",
     "commander": "^2.15.1",
     "config": "^1.30.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "replace-ext": "^1.0.0"
   }
 }
